--- a/MyApplication/app/src/main/res/layout/fm_task_list.xml
+++ b/MyApplication/app/src/main/res/layout/fm_task_list.xml
@@ -20,6 +20,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"></android.support.v7.widget.RecyclerView>
+            <include
+                layout="@layout/view_rv_header"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_path"
