1.课程列表下拉刷新，下拉加载更多； 2.上传头像； 3.修改个人资料； 4.修改密码

--- a/MyApplication/app/src/main/res/layout/activity_course_list.xml
+++ b/MyApplication/app/src/main/res/layout/activity_course_list.xml
@@ -7,11 +7,20 @@
 
     <include layout="@layout/common_view_title_bar_course" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_course"
+    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+        android:id="@+id/view_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/white" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_course"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/white" />
+
+    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
+
 
 </LinearLayout>
