--- a/MyApplication/app/src/main/res/layout/activity_change_personal_data.xml
+++ b/MyApplication/app/src/main/res/layout/activity_change_personal_data.xml
@@ -16,41 +16,41 @@
             android:background="@color/white"
             android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="61dp">
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="61dp">-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
-                    android:text="@string/last_name"
-                    android:textColor="#999999"
-                    android:textSize="14sp" />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_marginLeft="20dp"-->
+                    <!--android:text="@string/last_name"-->
+                    <!--android:textColor="#999999"-->
+                    <!--android:textSize="14sp" />-->
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/tiedt_last_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="110dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/transparent"
-                    android:ellipsize="end"
-                    android:gravity="center_vertical"
-                    android:singleLine="true"
-                    android:textColor="#333333"
-                    android:textSize="14sp" />
+                <!--<android.support.design.widget.TextInputEditText-->
+                    <!--android:id="@+id/tiedt_last_name"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_marginLeft="110dp"-->
+                    <!--android:layout_marginRight="10dp"-->
+                    <!--android:background="@color/transparent"-->
+                    <!--android:ellipsize="end"-->
+                    <!--android:gravity="center_vertical"-->
+                    <!--android:singleLine="true"-->
+                    <!--android:textColor="#333333"-->
+                    <!--android:textSize="14sp" />-->
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="108dp"
-                    android:background="#dddddd" />
+                <!--<View-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="1px"-->
+                    <!--android:layout_alignParentBottom="true"-->
+                    <!--android:layout_marginLeft="108dp"-->
+                    <!--android:background="#dddddd" />-->
 
-            </RelativeLayout>
+            <!--</RelativeLayout>-->
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -66,7 +66,7 @@
                     android:textSize="14sp" />
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/tiedt_first_name"
+                    android:id="@+id/tiedt_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
