--- a/MyApplication/app/src/main/res/values/array.xml
+++ b/MyApplication/app/src/main/res/values/array.xml
@@ -4,4 +4,9 @@
         <item>拍照</item>
         <item>访问相册</item>
     </string-array>
+
+    <string-array name="wx_share_select">
+        <item>微信好友</item>
+        <item>微信朋友圈</item>
+    </string-array>
 </resources>
