1.未开始与总进度改为学习进度；2.资讯列表增加下拉刷新河加载更多

--- a/MyApplication/app/src/main/res/layout/ac_news_list.xml
+++ b/MyApplication/app/src/main/res/layout/ac_news_list.xml
@@ -6,9 +6,16 @@
 
     <include layout="@layout/common_view_title_bar_course" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_news"
+    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+        android:id="@+id/view_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_news"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+    >
 
 </LinearLayout>
