--- a/MyApplication/app/src/main/res/layout/item_for_learning_path.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_learning_path.xml
@@ -8,10 +8,10 @@
         android:id="@+id/rel_cover"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_common_press"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="17dp"
-        android:layout_marginRight="17dp">
+        android:layout_marginRight="17dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/bg_common_press">
 
         <ImageView
             android:id="@+id/iv_path_cover"
@@ -29,37 +29,41 @@
 
 
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
             <View
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="0.5dp"
+
                 android:background="@color/white" />
 
             <TextView
                 android:id="@+id/tv_path_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="11dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginTop="9dp"
                 android:text="国际高中学前进阶"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
             <View
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="1dp"
                 android:background="@color/white" />
+
+            <include layout="@layout/view_path_content_info" />
+
 
             <TextView
                 android:id="@+id/tv_path_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="9dp"
                 android:text="进度: 60%"
                 android:textColor="@color/white"
                 android:textSize="12sp" />
