1.个人中心项复制到我的；2.任务学习路径接口有各个fragment单独调用

--- a/MyApplication/app/src/main/res/layout/fm_me.xml
+++ b/MyApplication/app/src/main/res/layout/fm_me.xml
@@ -24,9 +24,8 @@
                     android:id="@+id/iv_me_bg"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="fitXY"
                     android:background="@drawable/me_bg"
-                     />
+                    android:scaleType="fitXY" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -73,8 +72,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/lin_rank"
-                        android:text="第10名"
                         android:layout_centerHorizontal="true"
+                        android:text="第10名"
                         android:textColor="#c1d4eb"
                         android:textSize="18sp" />
 
@@ -103,9 +102,9 @@
 
                     <TextView
                         style="@style/text_14_33"
-                        android:layout_marginTop="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
                         android:text="@string/learn_summary" />
                 </LinearLayout>
 
@@ -125,9 +124,9 @@
 
                     <TextView
                         style="@style/text_14_33"
-                        android:layout_marginTop="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
                         android:text="@string/my_list" />
                 </LinearLayout>
 
@@ -147,14 +146,16 @@
 
                     <TextView
                         style="@style/text_14_33"
-                        android:layout_marginTop="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
                         android:text="@string/my_honor" />
                 </LinearLayout>
             </LinearLayout>
 
-            <include layout="@layout/fm_me_footer_list" />
+            <include layout="@layout/view_personal_center_foot" />
+
+            <!--<include layout="@layout/fm_me_footer_list" />-->
         </LinearLayout>
     </ScrollView>
 
