讲师显示一行，小结去掉默认显示

--- a/MyApplication/app/src/main/res/layout/activity_learning_summary.xml
+++ b/MyApplication/app/src/main/res/layout/activity_learning_summary.xml
@@ -50,7 +50,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="14"
+                        android:text=""
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -80,7 +80,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="38"
+                        android:text=""
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -110,7 +110,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="20"
+                        android:text=""
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -147,8 +147,9 @@
                         android:id="@+id/tv_complete_micro_degree_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:visibility="gone"
                         android:layout_marginTop="10dp"
-                        android:text="14"
+                        android:text=""
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -178,7 +179,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="32"
+                        android:text=""
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -208,7 +209,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="38"
+                        android:text=""
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -251,7 +252,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="14"
+                        android:text=""
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -281,7 +282,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="38"
+                        android:text=""
+                        android:visibility="gone"
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -311,7 +313,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="38"
+                        android:text=""
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -349,7 +351,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="14"
+                        android:text=""
+                        android:visibility="gone"
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -379,7 +382,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="38"
+                        android:text=""
+                        android:visibility="gone"
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -409,7 +413,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="38"
+                        android:text=""
+                        android:visibility="gone"
                         android:textColor="#333333"
                         android:textSize="24sp" />
                 </LinearLayout>
