--- a/MyApplication/app/src/main/res/layout/activity_honor.xml
+++ b/MyApplication/app/src/main/res/layout/activity_honor.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/bg_main"
+              android:orientation="vertical">
 
-    <include layout="@layout/common_view_title_bar_course" />
+    <include layout="@layout/common_view_title_bar_course"/>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -33,7 +34,7 @@
                     <View
                         android:layout_width="108dp"
                         android:layout_height="1px"
-                        android:background="#d8d8d8" />
+                        android:background="#d8d8d8"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -42,12 +43,12 @@
                         android:layout_marginRight="10dp"
                         android:text="@string/medal_for_testing"
                         android:textColor="#333333"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"/>
 
                     <View
                         android:layout_width="108dp"
                         android:layout_height="1px"
-                        android:background="#d8d8d8" />
+                        android:background="#d8d8d8"/>
                 </LinearLayout>
 
                 <TextView
@@ -57,15 +58,15 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="5dp"
                     android:textColor="#888888"
-                    android:textSize="11sp" />
+                    android:textSize="11sp"/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_test_medal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
-                    android:background="@color/md_white_1000" />
+                    android:background="@color/md_white_1000"/>
             </LinearLayout>
 
             <LinearLayout
@@ -85,7 +86,7 @@
                     <View
                         android:layout_width="108dp"
                         android:layout_height="1px"
-                        android:background="#d8d8d8" />
+                        android:background="#d8d8d8"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -94,12 +95,12 @@
                         android:layout_marginRight="10dp"
                         android:text="@string/medal_for_learning"
                         android:textColor="#333333"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"/>
 
                     <View
                         android:layout_width="108dp"
                         android:layout_height="1px"
-                        android:background="#d8d8d8" />
+                        android:background="#d8d8d8"/>
                 </LinearLayout>
 
                 <TextView
@@ -109,15 +110,15 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="5dp"
                     android:textColor="#888888"
-                    android:textSize="11sp" />
+                    android:textSize="11sp"/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_learn_medal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:background="@color/md_white_1000"
-                    android:scrollbars="vertical" />
+                    android:scrollbars="vertical"/>
             </LinearLayout>
 
         </LinearLayout>
