--- a/MyApplication/app/src/main/res/layout/item_for_recomand_course.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_recomand_course.xml
@@ -72,9 +72,10 @@
             android:id="@+id/tv_course_auth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
             android:layout_alignParentRight="true"
-            android:text="作者:许教师"
+            android:layout_marginLeft="80dp"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:textColor="#999999"
             android:textSize="11sp"
             android:visibility="visible" />
