--- a/MyApplication/app/src/main/res/layout/item_for_test_medal.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_test_medal.xml
@@ -16,6 +16,12 @@
         app:aiv_BoarderWidth="0dp"
         app:aiv_ShowBoarder="true"
         app:aiv_TextSizeRatio="1" />
+    <!--<ImageView-->
+        <!--android:id="@+id/aiv_test_medal_photo"-->
+        <!--android:layout_height="55dp"-->
+        <!--android:layout_width="55dp"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:src="@drawable/achievement_default_icon"/>-->
 
 
     <TextView
