--- a/MyApplication/app/src/main/res/layout/activity_custom_splash.xml
+++ b/MyApplication/app/src/main/res/layout/activity_custom_splash.xml
@@ -8,8 +8,7 @@
         android:id="@+id/iv_custom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/splash_screen_page" />
+        android:scaleType="centerCrop"/>
 
     <Button
         android:id="@+id/btn_biting"
